--- a/pom.xml
+++ b/pom.xml
@@ -45,4 +45,17 @@
 		<!-- <module>spring-boot-lib-mongo</module> -->
 		<!-- <module>spring-boot-lib-activemq</module> -->
 	</modules>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-eclipse-plugin</artifactId>
+				<configuration>
+					<downloadSources>true</downloadSources>
+					<downloadJavadocs>true</downloadJavadocs>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
