add crawler.app.info in property

--- a/spring-boot-crawler-api/src/main/resources/application.properties
+++ b/spring-boot-crawler-api/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+# Verion
+crawler.app.info.app-name=@project.name@
+crawler.app.info.app-version=@project.version@
+crawler.app.info.time-stamp=@maven.build.timestamp@
