--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,16 +1,16 @@
 version: 2
 jobs:
   build:
-    working_directory: ~/
+    working_directory: ~/spring-boot-crawler
     docker:
       - image: circleci/openjdk:8-jdk-browsers
     steps:
       - checkout
       - restore_cache:
-          key: circleci-demo-java-spring-{{ checksum "pom.xml" }}
+          key: spring-boot-crawler-{{ checksum "pom.xml" }}
       - run: mvn dependency:go-offline
       - save_cache:
           paths:
             - ~/.m2
-          key: circleci-demo-java-spring-{{ checksum "pom.xml" }}
+          key: spring-boot-crawler-{{ checksum "pom.xml" }}
       - run: mvn package
