--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,10 @@
 version: 2
 jobs:
+  deploy-job:
+    steps:
+      - add_ssh_keys:
+          fingerprints:
+            - "f4:5e:62:4b:94:09:0d:7c:42:2c:f5:9f:f1:ce:a5:e7"
   build:
     working_directory: ~/spring-boot-crawler
     docker:
@@ -13,10 +18,5 @@ jobs:
           paths:
             - ~/.m2
           key: spring-boot-crawler-{{ checksum "pom.xml" }}
-      # - mvn package
-      - run: mvn --batch-mode release:prepare release:perform
-  deploy-job:
-    steps:
-      - add_ssh_keys:
-          fingerprints:
-            - "f4:5e:62:4b:94:09:0d:7c:42:2c:f5:9f:f1:ce:a5:e7"
+      - mvn package
+      # - run: mvn --batch-mode release:prepare release:perform
