--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,5 +16,5 @@ jobs:
       - add_ssh_keys:
           fingerprints:
             - "f4:5e:62:4b:94:09:0d:7c:42:2c:f5:9f:f1:ce:a5:e7"
-      - mvn package
+      - run: mvn package
       # - run: mvn --batch-mode release:prepare release:perform
