--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,4 +17,6 @@ jobs:
           fingerprints:
             - "f4:5e:62:4b:94:09:0d:7c:42:2c:f5:9f:f1:ce:a5:e7"
       # - run: mvn package
+      - run: git config --global user.name "circle-ci"
+      - run: git config --global user.email "circle@circle-ci.org"
       - run: mvn --batch-mode release:prepare release:perform
