remove ci skip comment

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,3 +20,4 @@ jobs:
       - run: git config --global user.name "circle-ci"
       - run: git config --global user.email "circle@circle-ci.org"
       - run: mvn --batch-mode release:prepare release:perform
+      # - run: mvn site
