set multi module project

--- a/spring-boot-crawler-api/src/main/resources/application.properties
+++ b/spring-boot-crawler-api/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.jackson.property-naming-strategy=SNAKE_CASE
+
 # Verion
 crawler.app.info.app-name=@project.name@
 crawler.app.info.app-version=@project.version@
