--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.7.RELEASE</version>
+		<version>2.2.4.RELEASE</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>jp.gihyo.wdpress.advance</groupId>
@@ -23,9 +25,29 @@
 
 	<properties>
 		<java.version>1.8</java.version>
-				<github.global.server>github</github.global.server>
+		<github.global.server>github</github.global.server>
+		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
 	</properties>
 
+	<modules>
+		<module>spring-boot-crawler-api</module>
+		<module>spring-boot-crawler-scheduling</module>
+		<module>spring-boot-crawler-crawling</module>
+		<module>spring-boot-lib-mongodb</module>
+		<module>spring-boot-lib-activemq</module>
+		<!-- <module>spring-boot-admin</module> -->
+		<!-- <module>spring-cloud-eureke</module> -->
+	</modules>
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>jp.gihyo.wbpress.advance.lib.activemq</groupId>
+				<artifactId>spring-boot-lib-activemq</artifactId>
+				<version>0.0.9-SNAPSHOT</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 	<dependencies>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -41,16 +63,19 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>org.junit.vintage</groupId>
+					<artifactId>junit-vintage-engine</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
 		</dependency>
 	</dependencies>
-
-	<modules>
-		<module>spring-boot-crawler-api</module>
-		<!-- <module>spring-boot-crawler-scheduling</module> -->
-		<!-- <module>spring-boot-crawler-crawling</module> -->
-		<!-- <module>spring-boot-lib-mongo</module> -->
-		<!-- <module>spring-boot-lib-activemq</module> -->
-	</modules>
 
 	<build>
 		<plugins>
@@ -91,25 +116,6 @@
 						<version>1.10.0</version>
 					</dependency>
 				</dependencies>
-			</plugin>
-            <plugin>
-				<groupId>de.jutzig</groupId>
-				<artifactId>github-release-plugin</artifactId>
-				<version>1.3.0</version>
-				<executions>
-					<execution>
-						<id>github-upload</id>
-						<phase>deploy</phase>
-						<goals>
-							<goal>release</goal>
-						</goals>
-						<configuration>
-							<releaseName>v${project.version}</releaseName>
-							<tag>v${project.version}</tag>
-							<artifact>${project.build.directory}/${project.artifactId}-${project.version}.jar</artifact>
-						</configuration>
-					</execution>
-				</executions>
 			</plugin>
 		</plugins>
 	</build>
