--- a/spring-boot-crawler-crawling/pom.xml
+++ b/spring-boot-crawler-crawling/pom.xml
@@ -3,26 +3,28 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
 	<parent>
 		<groupId>jp.gihyo.wdpress.advance</groupId>
 		<artifactId>spring-boot-crawler</artifactId>
 		<version>0.0.9-SNAPSHOT</version>
 	</parent>
-	<packaging>jar</packaging>
-	<groupId>jp.gihyo.wdpress.advance.api</groupId>
-	<artifactId>spring-boot-crawler-api</artifactId>
-	<name>spring-boot-crawler-api</name>
+
+	<groupId>jp.gihyo.wbpress.advance.crawler.crawling</groupId>
+	<artifactId>spring-boot-crawler-crawling</artifactId>
+	<name>spring-boot-crawler-crawling</name>
 	<description>Demo project for Spring Boot</description>
+
 
 	<dependencies>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
+			<groupId>jp.gihyo.wbpress.advance.lib.activemq</groupId>
+			<artifactId>spring-boot-lib-activemq</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-thymeleaf</artifactId>
-		</dependency>
+		<!-- <dependency> -->
+		<!-- <groupId>org.springframework.cloud</groupId> -->
+		<!-- <artifactId>spring-cloud-starter-openfeign</artifactId> -->
+		<!-- </dependency> -->
 	</dependencies>
 
 	<build>
@@ -31,13 +33,6 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-			<!-- https://mvnrepository.com/artifact/com.google.cloud.tools/jib-maven-plugin -->
-			<!-- <plugin> -->
-			<!-- <groupId>com.google.cloud.tools</groupId> -->
-			<!-- <artifactId>jib-maven-plugin</artifactId> -->
-			<!-- <version>1.5.1</version> -->
-			<!-- </plugin> -->
-
 		</plugins>
 	</build>
 
