--- a/spring-boot-crawler-scheduling/pom.xml
+++ b/spring-boot-crawler-scheduling/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
@@ -9,19 +8,26 @@
 		<version>0.0.9-SNAPSHOT</version>
 	</parent>
 	<packaging>jar</packaging>
-	<groupId>jp.gihyo.wdpress.advance.api</groupId>
-	<artifactId>spring-boot-crawler-api</artifactId>
-	<name>spring-boot-crawler-api</name>
+	<groupId>jp.gihyo.wdpress.advance.scheduling</groupId>
+	<artifactId>spring-boot-crawler-scheduling</artifactId>
+	<name>spring-boot-crawler-scheduling</name>
 	<description>Demo project for Spring Boot</description>
 
 	<dependencies>
 		<dependency>
+			<groupId>jp.gihyo.wbpress.advance.lib.activemq</groupId>
+			<artifactId>spring-boot-lib-activemq</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
@@ -31,13 +37,6 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-			<!-- https://mvnrepository.com/artifact/com.google.cloud.tools/jib-maven-plugin -->
-			<!-- <plugin> -->
-			<!-- <groupId>com.google.cloud.tools</groupId> -->
-			<!-- <artifactId>jib-maven-plugin</artifactId> -->
-			<!-- <version>1.5.1</version> -->
-			<!-- </plugin> -->
-
 		</plugins>
 	</build>
 
