--- a/spring-boot-crawler-crawling/src/main/resources/application.properties
+++ b/spring-boot-crawler-crawling/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+server.port=7100
+spring.application.name=crawling
 
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=37017
+spring.data.mongodb.database=qiita_items
+
+spring.activemq.broker-url=tcp://localhost:31616
+spring.activemq.user=admin
+spring.activemq.password=admin
