--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
 	<properties>
 		<java.version>1.8</java.version>
 		<github.global.server>github</github.global.server>
+		<spring-cloud.version>Hoxton.SR1</spring-cloud.version>
 		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
 	</properties>
 
@@ -42,9 +43,21 @@
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-dependencies</artifactId>
+				<version>${spring-cloud.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+			<dependency>
 				<groupId>jp.gihyo.wbpress.advance.lib.activemq</groupId>
 				<artifactId>spring-boot-lib-activemq</artifactId>
-				<version>0.0.9-SNAPSHOT</version>
+				<version>0.0.10-SNAPSHOT</version>
+			</dependency>
+			<dependency>
+				<groupId>jp.gihyo.wbpress.advance.lib.mongo</groupId>
+				<artifactId>spring-boot-lib-mongo</artifactId>
+				<version>0.0.10-SNAPSHOT</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
