FeignClientによる外部サービスアクセス

--- a/spring-boot-crawler-crawling/src/main/resources/application.properties
+++ b/spring-boot-crawler-crawling/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.data.mongodb.database=qiita_items
 spring.activemq.broker-url=tcp://localhost:31616
 spring.activemq.user=admin
 spring.activemq.password=admin
+
+
+feign.httpclient.enabled=true
+feign.compression.request.mime-types=application/xml,application/json
