--- a/pom.xml
+++ b/pom.xml
@@ -6,9 +6,10 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.2.4.RELEASE</version>
+		<version>2.2.5.RELEASE</version>
 		<relativePath />
 	</parent>
+
 	<groupId>jp.gihyo.wdpress.advance</groupId>
 	<artifactId>spring-boot-crawler</artifactId>
 	<version>0.0.11-SNAPSHOT</version>
@@ -28,16 +29,19 @@
 		<github.global.server>github</github.global.server>
 		<spring-cloud.version>Hoxton.SR1</spring-cloud.version>
 		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
+		<spring-boot-admin.version>2.2.1</spring-boot-admin.version>
 	</properties>
 
 	<modules>
+		<module>spring-boot-admin</module>
 		<module>spring-boot-crawler-api</module>
 		<module>spring-boot-crawler-scheduling</module>
 		<module>spring-boot-crawler-crawling</module>
 		<module>spring-boot-lib-mongodb</module>
 		<module>spring-boot-lib-activemq</module>
-		<!-- <module>spring-boot-admin</module> -->
+
 		<!-- <module>spring-cloud-eureke</module> -->
+		<!-- <module>spring-cloud-gateway</module> -->
 	</modules>
 
 	<dependencyManagement>
@@ -46,6 +50,13 @@
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-dependencies</artifactId>
 				<version>${spring-cloud.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+			<dependency>
+				<groupId>de.codecentric</groupId>
+				<artifactId>spring-boot-admin-dependencies</artifactId>
+				<version>${spring-boot-admin.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
@@ -92,10 +103,10 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 		</dependency>
-                <dependency>
-    <groupId>javax.xml.bind</groupId>
-    <artifactId>jaxb-api</artifactId>
-</dependency>
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+		</dependency>
 
 	</dependencies>
 
