--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -25,20 +27,19 @@
 	<properties>
 		<java.version>1.8</java.version>
 		<github.global.server>github</github.global.server>
-		<spring-cloud.version>Hoxton.SR1</spring-cloud.version>
-		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
+		<spring-cloud.version>Hoxton.SR3</spring-cloud.version>
+		<!-- <maven-jar-plugin.version>3.1.1</maven-jar-plugin.version> -->
 		<spring-boot-admin.version>2.2.1</spring-boot-admin.version>
 	</properties>
 
 	<modules>
 		<module>spring-boot-admin</module>
-		<module>spring-boot-crawler-api</module>
+		<module>spring-boot-lib-activemq</module>
 		<module>spring-boot-crawler-scheduling</module>
 		<module>spring-boot-crawler-crawling</module>
 		<module>spring-boot-lib-mongodb</module>
-		<module>spring-boot-lib-activemq</module>
-
-		<!-- <module>spring-cloud-eureke</module> -->
+		<module>spring-boot-crawler-api</module>
+		<module>spring-cloud-eureke</module>
 		<!-- <module>spring-cloud-gateway</module> -->
 	</modules>
 
@@ -68,6 +69,11 @@
 				<artifactId>spring-boot-lib-mongo</artifactId>
 				<version>0.0.12-SNAPSHOT</version>
 			</dependency>
+			<!-- <dependency> -->
+			<!-- <groupId>com.google.cloud.tools</groupId> -->
+			<!-- <artifactId>jib-maven-plugin</artifactId> -->
+			<!-- <version>2.1.0</version> -->
+			<!-- </dependency> -->
 		</dependencies>
 	</dependencyManagement>
 	<dependencies>
