--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,6 @@
 		<java.version>1.8</java.version>
 		<github.global.server>github</github.global.server>
 		<spring-cloud.version>Hoxton.SR3</spring-cloud.version>
-		<!-- <maven-jar-plugin.version>3.1.1</maven-jar-plugin.version> -->
 		<spring-boot-admin.version>2.2.1</spring-boot-admin.version>
 	</properties>
 
@@ -39,8 +38,8 @@
 		<module>spring-boot-crawler-crawling</module>
 		<module>spring-boot-lib-mongodb</module>
 		<module>spring-boot-crawler-api</module>
-		<module>spring-cloud-eureke</module>
-		<!-- <module>spring-cloud-gateway</module> -->
+		<module>spring-cloud-eureka</module>
+		<module>spring-cloud-gateway</module>
 	</modules>
 
 	<dependencyManagement>
@@ -69,11 +68,6 @@
 				<artifactId>spring-boot-lib-mongo</artifactId>
 				<version>0.0.12-SNAPSHOT</version>
 			</dependency>
-			<!-- <dependency> -->
-			<!-- <groupId>com.google.cloud.tools</groupId> -->
-			<!-- <artifactId>jib-maven-plugin</artifactId> -->
-			<!-- <version>2.1.0</version> -->
-			<!-- </dependency> -->
 		</dependencies>
 	</dependencyManagement>
 	<dependencies>
