--- a/spring-boot-crawler-api/src/main/resources/application.properties
+++ b/spring-boot-crawler-api/src/main/resources/application.properties
@@ -1,6 +1,10 @@
+spring.application.name=crawler-api
 spring.jackson.property-naming-strategy=SNAKE_CASE
 
 # Verion
 crawler.app.info.app-name=@project.name@
 crawler.app.info.app-version=@project.version@
 crawler.app.info.time-stamp=@maven.build.timestamp@
+
+spring.boot.admin.client.url=http://localhost:7777  
+management.endpoints.web.exposure.include=* 
