--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -57,6 +59,11 @@
 				<scope>import</scope>
 			</dependency>
 			<dependency>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>jib-maven-plugin</artifactId>
+				<version>2.1.0</version>
+			</dependency>
+			<dependency>
 				<groupId>jp.gihyo.wbpress.advance.lib.activemq</groupId>
 				<artifactId>spring-boot-lib-activemq</artifactId>
 				<version>0.0.13-SNAPSHOT</version>
@@ -64,6 +71,11 @@
 			<dependency>
 				<groupId>jp.gihyo.wbpress.advance.lib.mongo</groupId>
 				<artifactId>spring-boot-lib-mongo</artifactId>
+				<version>0.0.13-SNAPSHOT</version>
+			</dependency>
+			<dependency>
+				<groupId>jp.gihyo.wdpress.advance.api</groupId>
+				<artifactId>spring-boot-crawler-api</artifactId>
 				<version>0.0.13-SNAPSHOT</version>
 			</dependency>
 		</dependencies>
