--- a/spring-cloud-gateway/pom.xml
+++ b/spring-cloud-gateway/pom.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>jp.gihyo.wdpress.advance</groupId>
@@ -10,7 +12,7 @@
 	<groupId>jp.gihyo.wdpress.advance.gateway</groupId>
 	<artifactId>spring-cloud-gateway</artifactId>
 	<name>spring-cloud-gateway</name>
-	<description>Demo project for Spring Boot</description>
+	<description>gateway</description>
 
 	<dependencies>
 		<dependency>
@@ -24,6 +26,10 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-loadbalancer</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>jp.gihyo.wdpress.advance.api</groupId>
+			<artifactId>spring-boot-crawler-api</artifactId>
 		</dependency>
 	</dependencies>
 
