--- a/spring-boot-crawler-api/pom.xml
+++ b/spring-boot-crawler-api/pom.xml
@@ -12,6 +12,9 @@
 	<name>spring-boot-crawler-api</name>
 	<description>Demo project for Spring Boot</description>
 
+  <properties>
+    <spring-boot.repackage.skip>true</spring-boot.repackage.skip>
+   </properties>
 	<dependencies>
 		<dependency>
 			<groupId>de.codecentric</groupId>
