--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
 		<module>spring-boot-crawler-api</module>
 		<module>spring-cloud-eureka</module>
 		<module>spring-cloud-gateway</module>
+		<module>spring-cloud-config</module>
 	</modules>
 
 	<dependencyManagement>
